some practice with vue and building a user card from github

--- a/components/exercises/boilerplace.html
+++ b/components/exercises/boilerplace.html
@@ -70,6 +70,7 @@
         return {};
       },
       mounted(){
+        //timeout set as the time a little delay of api passing data to child, delay of 10 seconds
         setTimeout(() => {
           // Note: this won't run until the entire view is rendered
           this.$nextTick(function () {
