small update to alt text

--- a/components/exercises/boilerplace.html
+++ b/components/exercises/boilerplace.html
@@ -29,7 +29,7 @@
   <script type="text/x-template" id="personal-image-component">
     
     <div class="image">
-      <img :src="image" alt="James Image" :title="`A picture from ${name} GitHub profile`">
+      <img :src="image" :alt="`Profile image of ${name}`" :title="`A picture from ${name} GitHub profile`">
     </div>
   
   </script>
