small update to alt text

--- a/components/exercises/boilerplace.html
+++ b/components/exercises/boilerplace.html
@@ -131,6 +131,7 @@
     new Vue({
       el: '#app',
       data: {
+        //username to pull in
         usernames:['bladedevleoper', 'crazzuk', 'juststeveking'],
       }
     })
