small update to alt text

--- a/components/exercises/boilerplace.html
+++ b/components/exercises/boilerplace.html
@@ -132,7 +132,7 @@
       el: '#app',
       data: {
         //username to pull in
-        usernames:['bladedevleoper', 'crazzuk', 'juststeveking'],
+        usernames:['bladedevleoper', 'crazzuk', 'juststeveking', 'hootlex'],
       }
     })
   </script>
